samples/_failures_safe/1761096927_00faed_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_df2b9a0e.c: In function ‘main’:
./samples/SAFE/__tmp_df2b9a0e.c:130:5: error: expected expression at end of input
  130 |     if (!read_size_t("Enter columns for matrix A: ", &cols))
      |     ^~
./samples/SAFE/__tmp_df2b9a0e.c:130:5: error: expected declaration or statement at end of input
